--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>FPO DOT EYE OH</title>
   </head>
   <body>
-    <div id='fpo'>FPO</div>
+    <h1 id='fpo'>FPO</h1>
   </body>
   <link href='https://fonts.googleapis.com/css?family=Bungee+Shade' rel='stylesheet'>
   <style>
