--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <title>FPO DOT EYE OH</title>
+    <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'>
   </head>
   <body>
     <h1 id='fpo'>FPO</h1>
