--- a/index.html
+++ b/index.html
@@ -5,14 +5,23 @@
     <title>FPO DOT EYE OH</title>
     <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'>
   </head>
-  <body>
+  <body class='a'>
+    <div id="a"></div>
+    <div id="b"></div>
     <h1 id='fpo'>FPO</h1>
   </body>
+  <script>
+    (function(b){
+      var tap = function(){ b.className = b.className == 'a' ? 'b' : 'a' };
+      b.addEventListener('mousedown', tap);
+      b.addEventListener('touchstart', tap);
+    })(document.body);
+  </script>
   <style>
   html,body{
     height:100%
   }
-  @-webkit-keyframes colors {
+  @-webkit-keyframes colors-a {
     0% {
       background-color: rgb(255,0,255);
     }
@@ -26,7 +35,7 @@
       background-color: rgb(255,0,255);
     }
   }
-  @keyframes colors {
+  @keyframes colors-a {
     0% {
       background-color: rgb(255,0,255);
     }
@@ -40,25 +49,78 @@
       background-color: rgb(255,0,255);
     }
   }
+
+  @-webkit-keyframes colors-b {
+    0% {
+      background-color: rgb(0,255,0);
+    }
+    33% {
+      background-color: rgb(0,0,255);
+    }
+    66% {
+      background-color: rgb(255,0,0);
+    }
+    100% {
+      background-color: rgb(0,255,0);
+    }
+  }
+  @keyframes colors-b {
+    0% {
+      background-color: rgb(0,255,0);
+    }
+    33% {
+      background-color: rgb(0,0,255);
+    }
+    66% {
+      background-color: rgb(255,0,0);
+    }
+    100% {
+      background-color: rgb(0,255,0);
+    }
+  }
+
   body{
     margin: 0;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    user-select: none;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    background-color: rgb(255,0,255);
-    -webkit-animation:colors 25s infinite;
-            animation:colors 25s infinite;
+  }
+  #a,#b{
+    position: absolute;
+    width:100%;height:100%;
+    left:0;top:0;right:0;bottom:0;
+    z-index:-1;
+  }
+  #a{
+    -webkit-animation:colors-a 25s infinite;
+            animation:colors-a 25s infinite;
+  }
+  #b{
+    -webkit-animation:colors-b 25s infinite;
+            animation:colors-b 25s infinite;
+  }
+  .a #b{
+    visibility: hidden;
+  }
+  .b #a{
+    visibility: hidden;
   }
   #fpo{
     font-family: 'Bungee Shade', sans-serif;
     font-size: 35vw;
+  }
+  .a #fpo{
     color: #fff;
+  }
+  .b #fpo{
+    color: #000;
   }
   </style>
   <link href='https://fonts.googleapis.com/css?family=Bungee+Shade' rel='stylesheet'>
