--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=no'>
-    <title>FPO DOT EYE OH</title>
-    <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'>
+    <title>FPO DOT EYE OH!</title>
+    <link rel="shortcut icon" href="/favicon.ico" sizes="any" type='image/x-icon'>
+    <link rel="icon" href="/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="manifest" href="/manifest.webmanifest">
   </head>
   <body class='a'>
     <div id="a"></div>
@@ -124,6 +127,13 @@
   .b #fpo{
     color: #000;
   }
+  @font-face {
+    font-family: 'Bungee Shade';
+    font-style: normal;
+    font-display: swap;
+    font-weight: 400;
+    src: url(https://cdn.jsdelivr.net/fontsource/fonts/bungee-shade@latest/latin-400-normal.woff2) format('woff2'), url(https://cdn.jsdelivr.net/fontsource/fonts/bungee-shade@latest/latin-400-normal.woff) format('woff');
+    unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
+  } 
   </style>
-  <link href='https://fonts.googleapis.com/css?family=Bungee+Shade' rel='stylesheet'>
 </html>
