--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
     font-family: 'Bungee Shade', sans-serif;
     font-size: 35vw;
     margin:0;
+    pointer-events: none;
+    webkit-text-size-adjust:none;
   }
   .a #fpo{
     color: #fff;
