remove bars on ios

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=no'>
+    <meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=no, viewport-fit=cover'>
     <title>FPO DOT EYE OH!</title>
     <link rel="shortcut icon" href="/favicon.ico" sizes="any" type='image/x-icon'>
     <link rel="icon" href="/icon.svg" type="image/svg+xml">
