--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=no, viewport-fit=cover'>
-    <meta name="theme-color" content="#000000"
+    <meta name="theme-color" content="#000000">
     <title>FPO DOT EYE OH!</title>
     <link rel="shortcut icon" href="/favicon.ico" sizes="any" type='image/x-icon'>
     <link rel="icon" href="/icon.svg" type="image/svg+xml">
