--- a/index.html
+++ b/index.html
@@ -1,39 +1,51 @@
 <!DOCTYPE html>
-<html manifest="/manifest.appcache">
-  <head>
-    <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=no, viewport-fit=cover'>
-    <meta name="theme-color" content="#000000">
-    <title>FPO DOT EYE OH!</title>
-    <link rel="shortcut icon" href="/favicon.ico" sizes="any" type='image/x-icon'>
-    <link rel="icon" href="/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <link rel="manifest" href="/manifest.webmanifest">
-  </head>
-  <body class='a'>
-    <div id="a"></div>
-    <div id="b"></div>
-    <h1 id='fpo'>FPO</h1>
-  </body>
-  <script>
-    (function(body){
-      const motion = window.matchMedia("(prefers-reduced-motion: no-preference)");
-      const scheme = document.querySelector('meta[name="theme-color"]')
-      let cur = 'a';
-      const bgs = {
-        a: document.querySelector('#a'),
-        b: document.querySelector('#b')
-      }
-      const tap = (e) => { e.preventDefault(); body.className = cur = body.className == 'a' ? 'b' : 'a' };
-      const click = ('ontouchstart' in document.documentElement)  ? 'touchstart' : 'mousedown';
-      body.addEventListener(click, tap);
-      setInterval(() => {
-        const color = window.getComputedStyle(bgs[cur])['background-color'];
-        scheme.setAttribute('content', color)
-      })
-    })(document.body);
-  </script>
-  <style>
+<html>
+<head>
+  <meta charset='utf-8'>
+  <meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=no, viewport-fit=cover'>
+  <meta name="theme-color" content="#000000">
+  <title>FPO DOT EYE OH!</title>
+  <link rel="shortcut icon" href="/favicon.ico" sizes="any" type='image/x-icon'>
+  <link rel="icon" href="/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <link rel="manifest" href="/manifest.webmanifest">
+</head>
+<body class='a'>
+  <div id="a"></div>
+  <div id="b"></div>
+  <h1 id='fpo'>FPO</h1>
+</body>
+<script>
+  (function(body){
+    const motion = window.matchMedia("(prefers-reduced-motion: no-preference)");
+    const scheme = document.querySelector('meta[name="theme-color"]')
+    let cur = 'a';
+    const bgs = {
+      a: document.querySelector('#a'),
+      b: document.querySelector('#b')
+    }
+    const tap = (e) => { e.preventDefault(); body.className = cur = body.className == 'a' ? 'b' : 'a' };
+    const click = ('ontouchstart' in document.documentElement)  ? 'touchstart' : 'mousedown';
+    body.addEventListener(click, tap);
+    setInterval(() => {
+      const color = window.getComputedStyle(bgs[cur])['background-color'];
+      scheme.setAttribute('content', color)
+    })
+    if ('serviceWorker' in navigator) {
+      console.log('sw:register');
+      navigator.serviceWorker.register('../sw.js')
+        .then(() => {
+          console.log('sw:register complete');
+        }, () => {
+          console.log('sw:register fail');
+        }
+      );
+    } else {
+      console.log('sw:not supported');
+    }
+  })(document.body);
+</script>
+<style>
   html,body{
     height:100%
   }
@@ -102,11 +114,11 @@
     display: flex;
     user-select: none;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
   }
   #a,#b{
     position: absolute;
@@ -116,11 +128,11 @@
   }
   #a{
     -webkit-animation:colors-a 25s infinite;
-            animation:colors-a 25s infinite;
+    animation:colors-a 25s infinite;
   }
   #b{
     -webkit-animation:colors-b 25s infinite;
-            animation:colors-b 25s infinite;
+    animation:colors-b 25s infinite;
   }
   .a #b{
     visibility: hidden;
@@ -149,5 +161,5 @@
     src: url(https://cdn.jsdelivr.net/fontsource/fonts/bungee-shade@latest/latin-400-normal.woff2) format('woff2'), url(https://cdn.jsdelivr.net/fontsource/fonts/bungee-shade@latest/latin-400-normal.woff) format('woff');
     unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
   } 
-  </style>
+</style>
 </html>
